# OpenPLi-PC

./: 0_INSTALL_ALL.sh  1_build_libs.sh  1_optional_media_build.sh  2_build_e2_procfs.sh  2_build_libs.sh  2_build_libxine.sh  3_build_libs.sh  3_build_libxine.sh  3_build_openpliPC.sh  4_build_libxine.sh  4_build_openpliPC.sh  4_build_plugins.sh  5_build_lirc.sh  5_build_openpliPC.sh  5_build_oscam.sh  5_build_plugins.sh  6_build_lirc.sh  6_build_oscam.sh  6_build_plugins.sh  7_build_lirc.sh  8_build_lirc.sh  ABOUT_FALLBACK_RECEIVER  ABOUT_LIRC  KBD.MAP  NVIDIA.EN  README.EN  README_HEVC.EN  READ_HISTORY.EN  TREE.EN  TROUBLESHOOTING_AND_SOLVING
TESTS/: DEBUG_LVL_3.sh  DEBUG_LVL_4.sh  VALGRIND.sh
dvbsoftwareca/: ca.h  ca_netlink.c  ca_netlink.h  dvb_softwareca.c  dvb_softwareca.h
dvbsoftwareca-5x/: Makefile  ca_netlink.c  ca_netlink.h  dvb_softwareca.c  dvbdev.h
oscam/: demux.patch  oscamchk  path.patch  root  softcam.oscam
oscam/conf/: oscam.conf  oscam.dvbapi  oscam.server.example  oscam.user.example
patches/: 20_04_Makefile.am.patch  4_1X_kernel.patch  E2IPlayer.patch  E2IPlayer_4k_dimension.patch  EPGImport.patch  OpenWebif-py2.patch  OpenWebif-py3.patch  OpenWebif.patch  OscamStatus.patch  SetPicon.patch  SimpleUmount.patch  SnmpAgent.patch  SystemTools.patch  aio-grab.patch  compile_py2.patch  dvbmediasink-0.10.patch  dvbmediasink-1.0.patch  kernel_less_4_9.patch  libdreamdvd.patch  lirc-gpio-ir-0.10.patch.diff  lirc-python3.10.patch  lirc_0.10.1-6.patch  patch-002bb79c-to-PC.patch  patch-05263160-to-PC.patch  patch-0586fd19-to-PC.patch  patch-09e3763b-to-PC-sigc2.patch  patch-09e3763b-to-PC.patch  patch-133c90d1-to-PC.patch  patch-163a70a7-to-PC-sigc2.patch  patch-163a70a7-to-PC.patch  patch-18a41ab3-to-PC-sigc2.patch  patch-18a41ab3-to-PC.patch  patch-20602dba-to-PC.patch  patch-27482ef2-to-PC-sigc2.patch  patch-27482ef2-to-PC.patch  patch-2d487c8e-to-PC.patch  patch-2d6416e9-to-PC.patch  patch-31118311-to-PC.patch  patch-341315bd-to-PC.patch  patch-341b8486-to-PC.patch  (+123 more)
plugins/enigma2-plugins/: Makefile.am  configure.ac
plugins/enigma2-plugins/antiscrollbar/po/: AntiScrollbar.pot  Makefile.am  ru.po
plugins/enigma2-plugins/antiscrollbar/src/: messages.pot  plugin.py
plugins/enigma2-plugins/automaticvolumeadjustment/po/: ru.po
plugins/enigma2-plugins/bitrate/: Makefile.am  bitrate.py  plugin.py
plugins/enigma2-plugins/bitrate/bitratetool/: Makefile.am  bitrate.cpp
plugins/enigma2-plugins/bitrate/po/: Makefile.am  ru.po
plugins/enigma2-plugins/epgrefresh/po/: ru.po
plugins/enigma2-plugins/epgsearch/src/: EPGSearch.py  plugin.py
plugins/enigma2-plugins/filebrowser/po/: ru.po
plugins/enigma2-plugins/ftpbrowser/po/: Makefile.am  ru.po
plugins/enigma2-plugins/ftpbrowser/src/: plugin.py
plugins/enigma2-plugins/networkbrowser/po/: ru.po
plugins/enigma2-plugins/permanentclock/po/: ru.po
plugins/enigma2-plugins/pluginhider/po/: Makefile.am  ru.po
plugins/enigma2-plugins/recordinfobar/po/: ru.po
plugins/enigma2-plugins/systemtime/po/: ru.po
plugins/enigma2-plugins/systemtime/src/: plugin.py  set-rtctime
plugins/enigma2-plugins/virtualzap/po/: ru.po
pre/: 20.04_packages.txt  99-lirc-symlinks.rules  dvb.conf.example  e2_procfs.conf  e2pc.desktop  environment-intel  kill_e2pc.desktop  logo.mvi  modules  rc.local  xine.conf  xine.conf.opengl  xine.conf.vaapi  xine.conf.vdpau
pre/UserMviCollection/: mvi1.mvi  mvi2.mvi  mvi3.mvi  mvi4.mvi  mvi5.mvi  mvi6.mvi  mvi7.mvi  mvi8.mvi  mvi9.mvi
pre/deb/: python-chardet_3.0.4-7_all.deb  python-docutils_0.16+dfsg-3_all.deb
pre/dvb/: audio.h  ca.h  video.h
pre/e2_procfs/: Kconfig  Makefile  e2_procfs.h  e2_procfs_amlinfo.c  e2_procfs_amode.c  e2_procfs_bus.c  e2_procfs_denc.c  e2_procfs_fileio.c  e2_procfs_fp.c  e2_procfs_frontend.c  e2_procfs_info.c  e2_procfs_main.c  e2_procfs_progress.c  e2_procfs_vmode.c  e2_procfs_vmpeg.c
pre/enigma2/: bouquets.radio  bouquets.tv  lamedb  lamedb5  profile  (+6 more)
scripts/: autostart.sh  enigma2_pre_start.sh  prestart.sh
util/: build_create_nim_sockets.sh  create_nim_sockets.c
(+2617 files in other folders)
